@@ -1,3 +1,6 @@
+2013-06-12 Alexander Opitz <opi@gmx.at>
+* #73: Let the response object send the data
+
 2013-06-06 Alexander Opitz <opi@gmx.at>
 * #71: Move autoloader out of Bootstrap.php
 * #72: Add SimpleRoute Filter and use Config Classes
